Removes custom JVMargs